Removed reference from removed library.